# overclocked

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
native/: GenerateIcon.swift  OverclockedMenuBar.swift
scripts/: build-menubar-app.sh  overclocked.5s.py  overclocked.py
src/overclocked/: __init__.py  _subprocess.py  aggregates.py  cli.py  config.py  copy.py  detectors.py  identity.py  render.py  runtime_home.py  sampler_state.py  storage.py  transcript_metrics.py  transcript_time.py
tests/: conftest.py  test_aggregates.py  test_cli.py  test_config.py  test_copy.py  test_detectors.py  test_identity.py  test_render.py  test_runtime_home.py  test_sampler_state.py  test_storage.py  test_swiftbar_wrapper.py  test_transcript_metrics.py  test_transcript_time.py
tests/fixtures/ps/: claude_running.txt  codex_daemon.txt
