[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overclocked"
version = "0.1.0"
description = "macOS menu bar AI copilot session counter"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
overclocked = "overclocked.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/overclocked"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
